Fixed spacing on info text for coin

--- a/dude.css
+++ b/dude.css
@@ -114,9 +114,9 @@
     margin: 0px;
 
     .cta-section-mobile {
+        padding: 10px;
         display: none;
         background-color: darkslategray;
-        border-radius: 4px;
         color: #fff;
 
         @media (max-width: 600px) {
